05-currency-conversion-microservice-basic/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress-1
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1/$2
spec:
  rules:
  - http:
      paths:
      - path: /currency-exchange(/|$)(.*)
        backend:
          serviceName: currency-exchange
          servicePort: 8000
      - path: /currency-conversion(/|$)(.*)
        backend:
          serviceName: currency-conversion
          servicePort: 8100
